--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>Rps</title>
   </head>
 <body>
-
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+  <h1 id="won"></h1>
+  <h1>Computer</h1>
+  <p id="computerScore">Computer has:</p>
+  <h1>Player</h1>
+  <p id="playerScore">Player has:</p>
+  
   <script src="java.js"></script>
 </body>
 
